# DIAWeb-backend

./: .gitignore  README.md  build.js  devserver.bat  devserver.sh  firebase.json  firebase.py  firebase.template.json  init.bat  init_supabase.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: main.yaml
.idx/: dev.nix
mysite/: .firebaserc  build.js  cert.pem  db.sqlite3  firebase.json  key.pem  package-lock.json  package.json  temp.py
mysite/myapp/: CustomCorsMiddleware.py  RateLimitMiddleware.py  admin.py  consumers.py  models.py  populatedb.py  routing.py  stream_consumer.py  tasks.py  tests.py  views.py
mysite/myapp/keras/: base_dts.xlsx  keras.py  model.keras
mysite/myapp/management/commands/: createapikey.py
mysite/myapp/migrations/: 0001_initial.py  0002_license.py  0003_apikey_delete_license.py  0004_rename_key_apikey_api_key.py  0005_apikey_remaining_requests.py  0006_alter_apikey_api_key.py
mysite/myapp/utils/: Serializer.py  redis_connection.py
mysite/mysite/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
